app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npsolutions-wagtail
  labels:
    app: npsolutions-wagtail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: npsolutions-wagtail
  template:
    metadata:
      labels:
        app: npsolutions-wagtail
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: wagtail
          image: docker.pkg.github.com/aldowntown/northprojects-solutions/wagtail-northprojects-solutions:v1.0.0-alpha.25
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: npsolutions-wagtail
spec:
  selector:
    app: npsolutions-wagtail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npsolutions-nextjs
  labels:
    app: npsolutions-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: npsolutions-nextjs
  template:
    metadata:
      labels:
        app: npsolutions-nextjs
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nextjs
          image: docker.pkg.github.com/aldowntown/northprojects-solutions/nextjs-northprojects-solutions:v1.0.0-alpha.33
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: npsolutions-nextjs
spec:
  selector:
    app: npsolutions-nextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: npsolutions
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
    - hosts:
        - npsolutions.mygranit.site
      secretName: tls-proxied-self-signed
  rules:
    - host: npsolutions.mygranit.site
      http:
        paths:
          - path: /admin
            backend:
              serviceName: npsolutions-wagtail
              servicePort: 80
          - path: /api/preview
            backend:
              serviceName: npsolutions-nextjs
              servicePort: 80
          - path: /api
            backend:
              serviceName: npsolutions-wagtail
              servicePort: 80
          - path: /
            backend:
              serviceName: npsolutions-nextjs
              servicePort: 80
